# ResourcesLoader

./: CMakeLists.txt  README.md
src/: AssetsLoader.hpp  AssetsLoader.inl  main.cpp
test/: CMakeLists.txt
test/loader_tests/: test.cpp  test_bad_load.cpp  test_good_load.cpp
